# validation

./: .rat-excludes  pyproject.toml
.github/workflows/: driver-smoke.yaml
adbc_drivers_validation/tests/: connection.py  query.py  statement.py
smoke/: pytest.ini
smoke/tests/: __init__.py  conftest.py  quirks.py  test_statement.py
