# Copyright (c) 2025-2026 ADBC Drivers Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "adbc-drivers-validation"
version = "0.1"
requires-python = ">=3.13"

dependencies = [
  "adbc-driver-manager>=1.11.0,<2",
  "bidict>=0.23.1,<1.0.0",
  "duckdb>=1.5.4,<2",
  "jinja2>=3.1.6,<4",
  "plpygis>=0.6.1,<0.7",
  "pyarrow>=24.0.0,<25",
  "pydantic>=2.13.4,<3",
  "pytest>=9.1.1,<10",
  "sqlglot>=30.12.0",
  "whenever>=0.10.0,<0.11",
]

[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Only ship the package itself; smoke/ holds the CI-only driver smoke tests.
include = ["adbc_drivers_validation*"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[tool.ruff.lint]
extend-select = ["ANN", "I"]
ignore = ["ANN401"]
